--- a/index.html
+++ b/index.html
@@ -35,12 +35,14 @@
 	display:inline-block;
 	margin-left:5%;
 }
+
+}
   </style>
  </head>
  <body>
 	<header role="banner">
 	    <img src="images/four-seasons.gif" alt="Seasonal Logo Goes Here" class="flexible" id="logo" />
-		<h1 class="masthead">Eddie Browser</h1>
+		<h1 class="masthead">Fashion Time</h1>
 		<nav>
 			<ul>
 				<li class="seasons"><a href="Default">Default</a></li>
@@ -55,17 +57,12 @@
    <main class="wrapper">
     <header><h3>Outfitter for All Seasons!</h3></header>
     <p>
-    The colors of the seasonal images are as follows:
-        <ul class="colors">
-            <li>Spring: <b>#2B7129</b></li>
-            <li>Summer: <b>#EBA52B</b></li>
-            <li>Fall: <b>#A81124</b></li>
-            <li>Winter: <b>#005393</b></li>
-        </ul>
+    In this page, I use jQuery which is a JavaScript library to let the user pick any season and it will direct you to the page and show you seasonal outfits. Enjoy each season! 
     </p>
+
     <p>
     Aesthetic gentrify YOLO McSweeney's typewriter single-origin coffee. Slow-carb hella listicle lomo, Helvetica single-origin coffee butcher stumptown. Chambray try-hard church-key mumblecore, tote bag PBR cardigan. Retro Austin Brooklyn, blog Intelligentsia gentrify jean shorts sartorial bicycle rights gastropub. Aesthetic wayfarers Pitchfork, tattooed Carles quinoa meh leggings distillery pork belly banjo. Umami cred lumbersexual skateboard, pork belly Tumblr vegan letterpress. Fixie bicycle rights butcher chillwave, gluten-free health goth Echo Park locavore whatever.
-    <img src="images/300x400.png" alt="Season Wear Goes Here" id="wear" />
+    <img src="images/fashion.jpg" alt="Season Wear Goes Here" id="wear" />
     </p>
     <p>
     Gluten-free selfies normcore chillwave. Listicle 90's chambray, seitan cold-pressed try-hard Etsy authentic flexitarian vinyl. Meditation bespoke freegan, single-origin coffee cred seitan 90's gentrify brunch Williamsburg squid cold-pressed. Brooklyn readymade Tumblr wayfarers ethical. Biodiesel VHS Godard High Life, tousled Banksy craft beer. Mlkshk direct trade locavore, mumblecore keytar artisan hashtag fap. Cred cronut Brooklyn, locavore art party small batch PBR semiotics ennui kitsch taxidermy mlkshk stumptown.
@@ -77,13 +74,65 @@
     Text provided by <a href="http://hipsum.co/" target="_blank">Hipster Ipsum</a>
     </p>
     <footer>
-    <p><small>&copy; 2021 by 
-        YOUR NAME HERE, All Rights Reserved ~ 
+    <p><small>&copy; 2022 by 
+        Gerson Barrientos, All Rights Reserved ~ 
         <a id="html-checker" href="#">Check HTML</a> ~ 
         <a id="css-checker" href="#">Check CSS</a></small>
     </p>
     </footer>
   </main>
   <script src="js/main.js"></script>
+  <script>
+    /*
+    change the source of the logo 
+    change the src of the wear. In other words, logo to wear
+    */
+
+    $("document").ready(function(){
+
+        $("li.seasons a").click(function(e){
+            e.preventDefault();
+
+            let season = $(this).attr("href");
+
+            $("#logo").attr("src", "images/four-seasons.gif");
+            $("#wear").attr("src", "images/fashion.jpg");
+            $("html").css("background-color", "#FF7100");
+
+            if (season =="Spring"){
+            $("#logo").attr("src", "images/spring.gif");
+            $("#wear").attr("src", "images/fashionspring.jpg");
+            $("html").css("background-color", "#519259");
+            } else if (season =="Summer"){
+            $("#logo").attr("src", "images/summer.gif");
+            $("#wear").attr("src", "images/summer-wear.jpg");
+            $("html").css("background-color", "#E26A2C");
+            } else if (season == "Fall"){
+            $("#logo").attr("src", "images/fall.gif");
+            $("#wear").attr("src", "images/fall-wear.jpg");
+            $("html").css("background-color", "#A81124");
+            } else if (season== "Winter"){
+            $("#logo").attr("src", "images/winter.gif");
+            $("#wear").attr("src", "images/winter-wear.jpg");
+            $("html").css("background-color", "#009DAE");
+            } else{
+            $("#logo").attr("src", "images/four-seasons.gif");
+            $("#wear").attr("src", "images/fashion.jpg");
+            $("html").css("background-color", "#FF7100");
+            }
+            alert(season);
+
+
+            //alert("Im clicked!");
+        });
+
+        });
+
+      
+
+
+
+
+  </script>
   </body>
 </html>
