add paragraph and comment alert ()

--- a/index.html
+++ b/index.html
@@ -57,22 +57,24 @@
    <main class="wrapper">
     <header><h3>Outfitter for All Seasons!</h3></header>
     <p>
-    In this page, I use jQuery which is a JavaScript library to let the user pick any season and it will direct you to the page and show you seasonal outfits. Enjoy each season! 
+    In this page, I use jQuery which is a JavaScript library (alternative of JavaScript, in other words, a short version) to let the user pick any season and it will direct you to the page and show you seasonal outfits. Enjoy each season! 
     </p>
 
     <p>
-    Aesthetic gentrify YOLO McSweeney's typewriter single-origin coffee. Slow-carb hella listicle lomo, Helvetica single-origin coffee butcher stumptown. Chambray try-hard church-key mumblecore, tote bag PBR cardigan. Retro Austin Brooklyn, blog Intelligentsia gentrify jean shorts sartorial bicycle rights gastropub. Aesthetic wayfarers Pitchfork, tattooed Carles quinoa meh leggings distillery pork belly banjo. Umami cred lumbersexual skateboard, pork belly Tumblr vegan letterpress. Fixie bicycle rights butcher chillwave, gluten-free health goth Echo Park locavore whatever.
+    How our clothes influence our perfoming? It influences a lot and because of that it is necessary to choose the appropiate outfit. In fact, outfits can influence our mood and it is important to always keep it mind. Many people hesitate on wearing outfit based on the season. A lot of people give up in trying new things but in reality, having a good outfit can really affect your mental health and overall happiness. For example, whenever I am at home all day, I want to go outside. Because of that, I do my best to wear nice clothes because that is what I feel inside. People can only see what is external and if I take care of myself and wear nice outfit, people will see that I care for myself.
     <img src="images/fashion.jpg" alt="Season Wear Goes Here" id="wear" />
     </p>
     <p>
-    Gluten-free selfies normcore chillwave. Listicle 90's chambray, seitan cold-pressed try-hard Etsy authentic flexitarian vinyl. Meditation bespoke freegan, single-origin coffee cred seitan 90's gentrify brunch Williamsburg squid cold-pressed. Brooklyn readymade Tumblr wayfarers ethical. Biodiesel VHS Godard High Life, tousled Banksy craft beer. Mlkshk direct trade locavore, mumblecore keytar artisan hashtag fap. Cred cronut Brooklyn, locavore art party small batch PBR semiotics ennui kitsch taxidermy mlkshk stumptown.
+    This article from "Science People" gives more details the importance of wearing and feeling good: "The type of clothes you wear –  and the kinds of accessories you use to either jazz them up or tone them down –  says a lot about who you are, where you’re from, what you do and how you feel about yourself and others.
+
+In fact, dress scholars Mary Ellen Roach and Joanne Eicher, find that dress is one of the main ways we send social signals because what we wear shows our identity.
+
+What you wear — or dress, as Roach and Eicher define it — sends nonverbal cues to other people".
     </p>
     <p>
-    Polaroid iPhone plaid, Pitchfork Shoreditch paleo. Hashtag keytar chia scenester Pinterest, semiotics tousled food truck. YOLO scenester deep v, taxidermy paleo quinoa McSweeney's Carles VHS mustache Williamsburg gluten-free readymade cold-pressed. Truffaut Thundercats Schlitz, listicle organic Brooklyn paleo squid asymmetrical readymade migas gluten-free Austin. Etsy Wes Anderson 8-bit retro, polaroid synth paleo banh mi before they sold out Vice. Bushwick fap Intelligentsia, whatever Etsy High Life Kickstarter migas retro Banksy YOLO Carles yr raw denim. Gluten-free fixie taxidermy pop-up, actually Kickstarter flannel put a bird on it master cleanse.
+     Overall, it is important to always consider yourself and check within yourself how are you feeling today because at the end of the day what matters is how we feel. For some people, style in outfit can be a struggle and it is okay. Clothes are not meant for others to see but for yourself. Whenever you think you are feeling down because of your clothes, remind yourself what matters here is that you feel and other people does not matter. So I will encourage you to keep going and keep shining because this world is happy to have you. Thank you for reading so far. 
     </p>
-    <p>
-    Text provided by <a href="http://hipsum.co/" target="_blank">Hipster Ipsum</a>
-    </p>
+    
     <footer>
     <p><small>&copy; 2022 by 
         Gerson Barrientos, All Rights Reserved ~ 
@@ -120,7 +122,7 @@
             $("#wear").attr("src", "images/fashion.jpg");
             $("html").css("background-color", "#FF7100");
             }
-            alert(season);
+            //alert(season);
 
 
             //alert("Im clicked!");
