added to main.js

--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@ What you wear — or dress, as Roach and Eicher define it — sends nonverbal cu
     change the src of the wear. In other words, logo to wear
     */
 
-    $("document").ready(function(){
+  /*  $("document").ready(function(){
 
         $("li.seasons a").click(function(e){
             e.preventDefault();
